# FLOCK

./: ExtractAllFeatures.py  LICENSE  README.md  pyproject.toml
BayesianFeatureSelection/R-Bayesian-PPVS/loo-approach/: ruckprojpred_stx_loo_2feat_no_contamination.Rmd  session-info.txt
BayesianFeatureSelection/R-Bayesian-PPVS/train-test-approach/: ruckprojpred_train_test_interactionTest.Rmd
BayesianFeatureSelection/R-Bayesian-PPVS/train-test-approach/data/: AllRuckFeaturesTrainTest.csv
Docs/: FLOCK.ClusteringFeats.html  FLOCK.DataLoading.html  FLOCK.DirectionalCorrelation.html  FLOCK.PACS.html  FLOCK.PacsFeats.html  FLOCK.Preprocessing.html  FLOCK.RegularityFeats.html  FLOCK.SpatialFeats.html  FLOCK.VelocityFeats.html  FLOCK.html
FLOCK/: ClusteringFeats.py  DataLoading.py  DirectionalCorrelation.py  PACS.py  PacsFeats.py  Preprocessing.py  RegularityFeats.py  SpatialFeats.py  VelocityFeats.py
FLOCK_GPS/: DataLoading.py  PacsFeats.py  Preprocessing.py  RegularityFeats.py
PredictiveModeling/: Features.csv  Labels.csv  Predictive-Modeling copy.ipynb  Predictive-Modeling.ipynb
PredictiveModeling/R/TRexSelector/: Trex.R
R-Bayesian-PPVS/: .gitattributes
R-Bayesian-PPVS/loo-approach/: .gitignore  ruckprojpred_stx_loo_2feat_no_contamination.Rmd  ruckprojpred_stx_loo_2feat_no_contaminationEnv.RData  ruckprojpred_stx_loo_2feat_no_contamination_2orderpoly.Rmd  ruckprojpred_stx_loo_2feat_no_contamination_consensus.Rmd  session-info.txt
R-Bayesian-PPVS/train-test-approach/: .gitignore  ruckprojpred_train_test.Rmd  ruckprojpred_train_test_Env.RData  ruckprojpred_train_test_interactionTest.Rmd  session-info.txt
RuckFinal/: DataLoading.py  Preprocessing.py  VelocityFeats.py
RuckFunctions/: ClusteringFeats.py  DataLoading.py  DirectionalCorrelation.py  PACS.py  RegularityFeats.py
SampleFeatures/: Indiv_feats.pkl  Squad_feats.pkl
Tutorials/: Break-Detection.ipynb  Clustering-Metrics.ipynb  Leadership-Metrics.ipynb  PACS-Metrics.ipynb  Path-Smoothing.ipynb  Regularity-Metrics.ipynb  Smoothing.ipynb  Spatial-Metrics.ipynb  Velocity-Metrics.ipynb  Velocity_features.ipynb
Tutorials/Data/csv/: 20210612_085528_PLT3SQ3_infil.csv
Tutorials/Data/geojason/: PLT1SQ1_infil.geojson  PLT1SQ2_infil.geojson  PLT1SQ3_infil.geojson  PLT2SQ1_infil.geojson  PLT2SQ2_infil.geojson  PLT2SQ3_infil.geojson  PLT3SQ1_infil.geojson  PLT3SQ2_infil.geojson  PLT3SQ3_infil.geojson  all_infils.geojson
archive/BayesianFeatureSelection/: TestRegresion_SpikeSlab.ipynb
archive/BayesianFeatureSelection/R-Bayesian-PPVS/: .gitattributes
(+6 files in other folders)
