[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "FLOCK"
version = "0.0.1"
authors = [
  { name="James McIntyre", email="james_mcintyre@uri.edu" },
]
description = "A package for extracting metrics from group movement GPS data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tufts-University/GPS-ruck"
Issues = "https://github.com/Tufts-University/GPS-ruck/issues"