[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "GPS_FLOCK"
version = "0.0.12"
authors = [
  { name="James McIntyre", email="james_mcintyre@uri.edu" },
]
description = "A package for extracting metrics from group movement GPS data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
keywords = ["GPS", "Group Dynamics", "Group Movement"]

[project.urls]
Homepage = "https://github.com/Tufts-University/FLOCK"
Issues = "https://github.com/Tufts-University/FLOCK/issues"

